--- a/app/javascript/style/header.scss
+++ b/app/javascript/style/header.scss
@@ -1,42 +1,114 @@
-.header-main-navbar {
-  background-color: #337ab7;
-  border-color: #337ab7 !important;
-  border-radius: 0px !important;
+.welcome-navbar-main {
+  height: 70px;
+  line-height: 1em;
+}
+
+.header-company-name {
+  font-weight: bolder;
+  font-family: $project-font;
+}
+
+.header-nav-item {
+  font-family: $project-font;
+  font-size: 14pt;
+}
+
+.header-nav-item:hover {
+  color: $header-default-sidebar-background-color !important;
+}
+
+.create-wp-nav-item {
+  border-radius: 4px;
+  border: 1px solid black;
+}
+
+.create-wp-nav-item:hover {
   a {
-    color: white;
+    color: $header-default-sidebar-background-color !important;
   }
+
+  border-color: $header-default-sidebar-background-color !important;
 }
 
-.company-name {
+.mobile-nav-collapse {
+  z-index: 1;
+  color: $header-default-sidebar-background-color !important;
+  transition: width 2s linear;
+}
+
+.mobile-nav-show {
+  width: 100%;
+}
+
+.navbar-side {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  padding: 0;
+  list-style: none;
+  border-left: 2px solid #ccc;
+  background-color: $header-default-sidebar-background-color !important;
+  overflow-y: scroll;
+  z-index: 1000;
+}
+
+.navbar-side-header {
+  margin: 0;
+  border-bottom: 1px solid #ccc;
+  height: 70px;
+}
+
+.side-link {
+  padding-left: 2rem;
+}
+
+.navbar-side {
+  -webkit-transform: translateX(100%);
+  -ms-transform: translateX(100%);
+  transform: translateX(100%);
+  -webkit-transition: 300ms ease;
+  transition: 300ms ease;
+}
+
+.reveal {
+  -webkit-transform: translateX(0%);
+  -ms-transform: translateX(0%);
+  transform: translateX(0%);
+  -webkit-transition: 300ms ease;
+  transition: 300ms ease;
+}
+
+.close-header-navbar-sidebar {
+  float: right;
   color: white;
-  font-weight: 300;
-  font-size: x-large;
-  border-right: solid white thin;
-  font-family: 'Kreon', serif;
+  font-size: xx-large;
 }
 
-.navbar-toggle {
-  .icon-bar {
-    background-color: white;
-  }
+.navbar-side-menu-item {
+  color: white;
+  font-size: 18pt;
+  font-family: $project-font;
 }
 
-.header-menu-item {
-  font-family: 'Kreon', serif;
+.navbar-side-sign-in {
+  color: white;
+  font-size: 14pt;
+  font-weight: bolder;
+  margin-left: -1em;
 }
 
-.header-menu-item:hover {
-  background-color: #3e4551 !important;
+.navbar-side-menu-workspace {
+  color: white;
+  font-size: 12pt;
 }
 
-@media only screen and (min-width : 768px) and (max-width: 778px) {
-  .company-name {
-    width: 223px;
-  }
+.navbar-side-menu-workspace:hover {
+  color: white;
+  text-decoration: none;
 }
 
-@media only screen and (min-width : 779px) {
-  .company-name {
-    width: 235px;
-  }
+.fa-times-thin:before {
+  content: '\00d7';
 }
