--- a/app/javascript/style/application.scss
+++ b/app/javascript/style/application.scss
@@ -9,6 +9,7 @@ $fa-font-path: "~font-awesome/fonts";
 @import "scaffolds";
 @import "users";
 @import "fonts";
+@import "welcome_index";
 
 .test-class {
   color: white;
