--- a/app/javascript/style/application.scss
+++ b/app/javascript/style/application.scss
@@ -10,7 +10,7 @@ $fa-font-path: "~font-awesome/fonts";
 @import "users";
 @import "fonts";
 @import "welcome_index";
-
+@import "workspace_show";
 .test-class {
   color: white;
   font-size: xx-large;
